resources/grrrr/bazarr.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  serviceName: bazarr
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
        vpn-egress: client
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: bazarr
          image: ghcr.io/hotio/bazarr
          ports:
          - containerPort: 6767
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /videos
              name: nfs-videos
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "100m"
      terminationGracePeriodSeconds: 0
      volumes:
        - name: nfs-videos
          nfs:
            path: /export/videos
            server: sergio.localdomain
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  selector:
    app: bazarr
  ports:
    - name: "http"
      port: 6767
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/auth-tls-error-page: getcert.addem.se
    ingress.kubernetes.io/auth-tls-secret: client-auth-root-ca-cert
    ingress.kubernetes.io/auth-tls-strict: "true"
    ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  tls:
    - hosts:
        - bazarr.addem.se
      secretName: bazarr-cert
  rules:
    - host: bazarr.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
