resources/grrrr/radarr.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
spec:
  serviceName: radarr
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        vpn-egress: client
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: ghcr.io/hotio/radarr
          imagePullPolicy: Always
          ports:
          - containerPort: 7878
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /videos
              name: nfs-videos
          resources:
            limits:
              cpu: "1500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
        - name: exportarr
          image: onedr0p/exportarr:master
          imagePullPolicy: IfNotPresent
          command:
          - exportarr
          - radarr
          ports:
            - containerPort: 9707
      volumes:
        - name: nfs-videos
          nfs:
            path: /export/videos
            server: sergio.localdomain
      terminationGracePeriodSeconds: 0
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        resources:
          requests:
            storage: 5Gi
        accessModes:
          - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  ports:
    - name: "http"
      port: 7878
    - name: "metrics"
      port: 9707
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/auth-tls-error-page: getcert.addem.se
    ingress.kubernetes.io/auth-tls-secret: client-auth-root-ca-cert
    ingress.kubernetes.io/auth-tls-strict: "true"
    ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  tls:
    - hosts:
        - radarr.addem.se
      secretName: radarr-cert
  rules:
    - host: radarr.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
