resources/grrrr/sonarr.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
spec:
  serviceName: sonarr
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: ghcr.io/hotio/sonarr
          ports:
          - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /videos
              name: nfs-videos
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: nfs-videos
          nfs:
            path: /export/videos
            server: sergio.localdomain
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        storageClassName: nfs-csi
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  selector:
    app: sonarr
  ports:
    - name: "http"
      port: 8989
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - sonarr.addem.se
      secretName: sonarr-cert
  rules:
    - host: sonarr.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
