resources/grrrr/deluge.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge
spec:
  serviceName: deluge
  selector:
    matchLabels:
      app: deluge
  template:
    metadata:
      labels:
        app: deluge
    spec:
      securityContext:
        sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"
      containers:
        - name: wg
          image: ghcr.io/linuxserver/wireguard
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "NET_RAW"]
          volumeMounts:
            - name: wg0-conf
              mountPath: /config
          resources:
            limits:
              cpu: "100m"
              memory: "100Mi"
        - name: deluge
          image: ghcr.io/linuxserver/deluge
          ports:
            - containerPort: 8112
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /videos
              name: nfs-videos
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
      volumes:
        - name: wg0-conf
          secret:
            secretName: wg0-conf
            defaultMode: 0600
        - name: nfs-videos
          nfs:
            path: /export/videos
            server: sergio.localdomain
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        storageClassName: nfs-csi
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: deluge
spec:
  selector:
    app: deluge
  ports:
    - name: "http"
      port: 8112
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth-credentials
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
    - hosts:
        - deluge.addem.se
      secretName: deluge-cert
  rules:
    - host: deluge.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge
                port:
                  number: 8112
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: deluge-lockdown
spec:
  endpointSelector:
    matchLabels:
      app: test-app
  ingress:
    - fromEntities:
        - host
        - remote-node
  egress:
    - toFQDNs:
        - matchName: se1.wg.azirevpn.net
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
