resources/grrrr/qbittorrent.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  serviceName: qbittorrent
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
        vpn-egress: gateway
    spec:
      securityContext:
        sysctls:
          - name: "net.ipv4.conf.all.src_valid_mark"
            value: "1"
      containers:
        - name: qbittorrent
          image: hotio/qbittorrent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /videos
              name: nfs-videos
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "100m"
        - name: socks-proxy
          image: xkuma/socks5
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 1080
      volumes:
        - name: wg0-conf
          secret:
            secretName: wg0-conf
            defaultMode: 0600
        - name: static-config
          configMap:
            name: qbittorrent-static-config
        - name: nfs-videos
          nfs:
            path: /export/videos
            server: sergio.localdomain
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        storageClassName: nfs-csi
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: "http"
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: addem-se-letsencrypt
    ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/auth-tls-error-page: getcert.addem.se
    ingress.kubernetes.io/auth-tls-secret: client-auth-root-ca-cert
    ingress.kubernetes.io/auth-tls-strict: "true"
    ingress.kubernetes.io/auth-tls-verify-client: "on"
spec:
  tls:
    - hosts:
        - qbittorrent.addem.se
      secretName: qbittorrent-cert
  rules:
    - host: qbittorrent.addem.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vpn-egress
spec:
  selector:
    vpn-egress: gateway
  ports:
    - name: socks
      port: 1080
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vpn-egress-gateway
spec:
  endpointSelector:
    matchLabels:
      vpn-egress: gateway
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: se1.wg.azirevpn.net
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vpn-egress-clients
spec:
  endpointSelector:
    matchLabels:
      vpn-egress: client
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            vpn-egress: gateway
      toPorts:
        - ports:
            - port: "1080"
              protocol: TCP
