resources/grrrr/vpn-egress-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-egress
spec:
  selector:
    matchLabels:
      app: vpn-egress
  template:
    metadata:
      labels:
        app: vpn-egress
        vpn-egress: gateway
    spec:
      securityContext:
        sysctls:
          - name: "net.ipv4.conf.all.src_valid_mark"
            value: "1"
      containers:
        - name: socks-proxy
          image: nixery.dev/nylon
          command: ["nylon", "-f"]
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 1080
      volumes:
        - name: wg0-conf
          secret:
            secretName: wg0-conf
            defaultMode: 0600
---
apiVersion: v1
kind: Service
metadata:
  name: vpn-egress
spec:
  selector:
    vpn-egress: gateway
  ports:
    - name: socks
      port: 1080
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vpn-egress-gateway
spec:
  endpointSelector:
    matchLabels:
      vpn-egress: gateway
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: se1.wg.azirevpn.net
      toPorts:
        - ports:
            - port: "51820"
              protocol: UDP
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vpn-egress-clients
spec:
  endpointSelector:
    matchLabels:
      vpn-egress: client
  ingress:
    - fromEntities:
        - cluster
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            vpn-egress: client
    - toEndpoints:
        - matchLabels:
            vpn-egress: gateway
      toPorts:
        - ports:
            - port: "1080"
              protocol: TCP
